# carbontrail

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: cache.py  db.py  main.py
backend/app/routers/: ai.py  amendments.py  anomalies.py  charities.py  chat.py  compare.py  dashboard.py  departments.py  explorer.py  export.py  gaps.py  graph.py  greenwash.py  insights.py  lobby_loops.py  money_flow.py  programs.py  recipients.py  revolving_door.py  search.py  stories.py
backend/app/services/: ai.py  scoring.py
backend/etl/: ingest.py
backend/tests/: test_api.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/anomalies/: page.tsx
frontend/src/app/api-docs/: page.tsx
frontend/src/app/bulk/: page.tsx
frontend/src/app/changelog/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/departments/: page.tsx
frontend/src/app/explorer/: page.tsx
frontend/src/app/flow/: page.tsx
frontend/src/app/gaps/: page.tsx
frontend/src/app/greenwash/: page.tsx
frontend/src/app/loops/: page.tsx
frontend/src/app/methodology/: page.tsx
frontend/src/app/network/: page.tsx
frontend/src/app/programs/: page.tsx
frontend/src/app/recipients/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/stories/: page.tsx
frontend/src/lib/: api.ts
(+32 files in other folders)
