[project]
name = "carbontrail-backend"
version = "0.1.0"
description = "CarbonTrail — Climate spending intelligence API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "duckdb>=1.1.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
]

[project.scripts]
etl = "etl.ingest:main"
